# 2026-QuEra-Technical

./: plots.jl  results.txt  run_benchmark.py  team_solutions.md
assets/: cheatsheet.ipynb  incomplete.md
team_solutions/The_Ducklings/: CHANGES.md  DELIVERABLES_SUMMARY.md  DOCUMENTATION_INDEX.md  FIDELITY_ANALYSIS.txt  IMPLEMENTATION_SUMMARY.md  NOISE_IMPLEMENTATION.md  README.md  README_QEC_COMPLETE.md  benchmark.py  benchmark_memory.py  complete_noise_demo.py  demo0.py  demo_noise_and_memory.py  fidelity_test.py  memory_benchmark.py  memory_correct.py  memory_decay_realistic.py  my.py  pyproject.toml  qec_demo.ipynb  qec_quickstart.py  route_a_measurement_fidelity.py  route_b_syndrome_fidelity.py  run_demo.py  run_memory_benchmark.py  run_qec_alternative.py  setup.py  slides_notes.txt  test1.py  test2.py  test3.py  test4.py  test5.py  test_imports.py  test_memory_decay.py  test_memory_decay_backup.py  test_memory_simple.py  test_random_state.py  validate_implementation.py
team_solutions/The_Ducklings/qec/: __init__.py  correction.py  encoding.py  error_mapping.py  errors.py  experiments.py  logical_ops.py  main.py  states.py  syndrome.py
team_solutions/The_Ducklings/the_ducklings_qec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
